--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 								var btn=document.getElementById("btn")
 								btn.addEventListener("click",redirect)
 							function redirect() {
-											window.location.href="https://limbs.ga/test/"
+											window.location.href="https://abhash.studio/test/"
 							}
 				</script>
 				<style>
