--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 				<h1>New website</h1>
 				<p> This is just a test website</p>
-				<button id="btn">Clock</button>
+				<button id="btn">Portfolio</button>
 				<script>
 								var btn=document.getElementById("btn")
 								btn.addEventListener("click",redirect)
