--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 				<meta charset="UTF-8">
 				<title>Page title</title>
+				<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2981130648705731"
+     crossorigin="anonymous"></script>
 </head>
 <body>
 				<h1>New website</h1>
