--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
 				<title>Page title</title>
 				<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2981130648705731"
      crossorigin="anonymous"></script>
+	<script
+  src="https://widget.galichat.com/gali-embeded.min.js" 
+  chat-hash="jnxs4bne34oygw1n90wim" 
+  defer>
+</script>
+	
 </head>
 <body>
 				<h1>New website</h1>
